# agent-atlas

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  atlas.example.yaml  pyproject.toml
skills/refresh-index/: SKILL.md
skills/route-task/: SKILL.md
skills/update-memory/: SKILL.md
src/agent_atlas/: cli.py  config.py  memory.py  registry.py  repo_map.py  router.py  safety.py  scanner.py  wiki.py
tests/: test_cli.py  test_registry.py  test_router.py  test_scanner.py  test_wiki.py
