[project]
name = "agent-atlas"
version = "0.1.0"
description = "Local control plane for LLM coding agents."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
atlas = "agent_atlas.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
